--- a/_config.yml
+++ b/_config.yml
@@ -90,78 +90,9 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: amorfati
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: ''
-
-
-
-# Header
-menu:
-  Home: /
-  Archives:
-
-
-# Favicon
-favicon:
-
-
-# Hero - Please specify width and height for structured data
-hero:
-  url:
-  width:
-  height:
-  size:
-  position:
-
-
-# Profile
-profile:
-  gravatar:
-  social:
-    github:
-    facebook:
-    linkedin:
-    instagram:
-    twitter:
-    flickr:
-    rss:
-
-
-# Site Verification
-site_verification:
-  enable:
-  google:
-  naver:
-  bing:
-
-
-# Analytics
-analytics:
-  google:
-  naver:
-
-
-# web fonts
-webfonts:
-  uses: ['Noto Sans KR', 'Font Awesome']
-  extraFonts:
-  #  - family: 'Hack'
-  #    url: '/fonts/hack/hack.css'
-
-
-# Extenreal Links
-links:
-  #  - name:
-  #    url:
-
-
-# Comments
-liveRe:
-  uid:
-
-disqus:
-  shortname:
