--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -28,7 +28,7 @@ archive_type: 'monthly'
 show_count: false
 
 # Miscellaneous
-google_analytics:
+google_analytics: G-N638V2M2NF
 gauges_analytics:
 favicon: /favicon/favicon.png
 twitter:
