--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "push": "git push s master"
   },
   "hexo": {
-    "version": "4.0.0"
+    "version": "5.2.0"
   },
   "dependencies": {
-    "clean-css": ">=4.1.11",
+    "clean-css": "^4.2.3",
     "constantinople": ">=3.1.1",
-    "hexo": "^4.0.0",
+    "hexo": "^5.2.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-feed": "^2.1.0",
+    "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
-    "hexo-generator-json-content": "^4.1.6",
+    "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-less": "^1.0.0",
