--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 遊びたがりブログ
-subtitle: ''
+subtitle: 'プログラミン / アナログゲーム製作'
 description: 'プログラミングやゲームについて、遊ぶように学べる情報を配信しています。'
 keywords: Programming,php,docker,go,golang,vscode
 author: ざきさん
